add a class to navigation

--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -13,21 +13,22 @@
 
 
 <body>
-    <nav>
-        <p>
-            <a href="#">Maintenance tracker App</a>
-        </p>
-        <ul class="nav-right">
-            <li>
-                <a href="login.html">login</a>
-            </li>
-            <li>
-                <a href="../signup.html">signUp</a>
-            </li>
+    <div class="nav">
+        <nav>
+            <p>
+                <a href="#">Maintenance tracker App</a>
+            </p>
+            <ul class="nav-right">
+                <li>
+                    <a href="login.html">login</a>
+                </li>
+                <li>
+                    <a href="../signup.html">signUp</a>
+                </li>
 
-        </ul>
-    </nav>
-
+            </ul>
+        </nav>
+    </div>
     <div class="login-content">
         <div class="admin-user">
             <i class="fa fa-user-circle" style="font-size:45px"></i>
@@ -41,10 +42,10 @@
             <div>
                 <input type="password" name="password" id="password" placeholder="password" required>
             </div>
-              <a href="admin/dashboard.html">
-                <input type="submit" value="Login"class="admin-login">
-              </a>
-           
+            <a href="admin/dashboard.html">
+                <input type="submit" value="Login" class="admin-login">
+            </a>
+
 
             <br>
             <span>
